Removing cuda-mlir-runtime dependency on nvqir.
Signed-off-by: Renaud Kauffmann <rkauffmann@nvidia.com>

--- a/runtime/cudaq/platform/default/rest/CMakeLists.txt
+++ b/runtime/cudaq/platform/default/rest/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(cudaq-rest-qpu
     fmt::fmt-header-only
     cudaq
     cudaq-platform-default
+    nvqir
     ${AWSSDK_LINK_LIBRARIES})
 
 install(TARGETS cudaq-rest-qpu DESTINATION lib)
