--- a/runtime/cudaq/platform/fermioniq/CMakeLists.txt
+++ b/runtime/cudaq/platform/fermioniq/CMakeLists.txt
@@ -25,7 +25,9 @@ target_link_libraries(${LIBRARY_NAME}
     cudaq-mlir-runtime 
     fmt::fmt-header-only
     cudaq 
-    cudaq-platform-default)
+    cudaq-platform-default
+    nvqir
+)
 
 install(TARGETS ${LIBRARY_NAME} DESTINATION lib)
 
