--- a/runtime/cudaq/platform/quera/CMakeLists.txt
+++ b/runtime/cudaq/platform/quera/CMakeLists.txt
@@ -25,8 +25,10 @@ target_link_libraries(${LIBRARY_NAME}
     pthread
     cudaq-mlir-runtime 
     cudaq-logger
-    cudaq 
-    cudaq-platform-default)
+    cudaq
+    cudaq-platform-default
+    nvqir
+)
 
 install(TARGETS ${LIBRARY_NAME} DESTINATION lib)
 
