--- a/.github/workflows/clean_up.yml
+++ b/.github/workflows/clean_up.yml
@@ -13,6 +13,7 @@ on:
         default: false
   schedule:
   - cron: "*/5 * * * *"
+  - cron: "0 0 * * *"
   pull_request_target:
     types:
       - closed
@@ -177,7 +178,7 @@ jobs:
 
   pr_cleanup:
     name: Clean up documentation previews
-    if: github.event_name == 'pull_request_target' || github.event_name == 'schedule'
+    if: github.event_name == 'pull_request_target' || github.event.schedule == '0 0 * * *'
     runs-on: ubuntu-latest
 
     permissions:
@@ -205,12 +206,6 @@ jobs:
           GH_TOKEN: ${{ secrets.REPO_BOT_ACCESS_TOKEN || github.token }}
         run: |
           set -euo pipefail
-
-          # Only run once per day (at midnight UTC)
-          if [ "$(date -u +%H%M)" != "0000" ]; then
-            echo "Skipping stale PR cleanup."
-            exit 0
-          fi
 
           git config --global user.name "cuda-quantum-bot"
           git config --global user.email "cuda-quantum-bot@users.noreply.github.com"
