use target_image tag_suffix
Signed-off-by: Mitchell <mitch_dz@hotmail.com>

--- a/.github/workflows/package_source_diff.yml
+++ b/.github/workflows/package_source_diff.yml
@@ -30,7 +30,7 @@ on:
       push_image:
         required: false
         type: boolean
-        default: false
+        default: true
         description: 'Push the built source image to GHCR (requires permissions).'
       environment:
         required: false
@@ -138,7 +138,9 @@ jobs:
         id: push
         run: |
           docker load --input /tmp/package-sources.tar
-          tag="ghcr.io/${{ github.repository_owner }}/package-sources:${{ github.sha }}"
+          target_image="${{ inputs.target_image || 'nvcr.io/nvidia/nightly/cuda-quantum:cu13-latest' }}"
+          tag_suffix="${target_image##*:}"
+          tag="ghcr.io/${{ github.repository_owner }}/cuda-quantum-src:${tag_suffix}"
           docker tag package-sources:latest "$tag"
           docker push "$tag"
           echo "image_tag=$tag" >> $GITHUB_OUTPUT
